fix cdm.expanded title not wrapping

--- a/css/cdm.less
+++ b/css/cdm.less
@@ -93,6 +93,10 @@
 		display : none;
 	}
 
+	.titleWrap {
+		white-space : normal;
+	}
+
 	.footer {
 		border: 0px solid #ddd;
 		border-bottom-width: 1px;
